Improved plots, added values for probing bar chart (still require processing)

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -680,6 +680,16 @@ This can be solved by editing the permuted Gaussian bell to have \(\sum_{i=0}^n 
 		\label{fig:visual-scene-exp}
 	\end{figure}
 	
+	FOR BAR CHART:
+	
+	Probe at (19,-26.75):
+	
+	[('keys', 0.22827929349034107), ('Watch', -0.018549398363469777), ('mug', -0.025309361445942102), ('wallet', -0.034187368731921304), ('pen', 0.2098596398998358), ('mouse', -0.023035819302988644)]
+	
+	Probe at (-13,21.5):
+	
+[('keys', -0.020032173214673016), ('Watch', -0.034034204029029354), ('mug', 0.03443254630997427), ('wallet', 0.16100011074269183), ('pen', 0.089801145874187763), ('mouse', -0.027742071303527464)]
+	
 	\subsection{Localization and mapping}
 	- TBD
 	
