Chanced probe images to have transparent background.

--- a/vsa/HRR.ipynb
+++ b/vsa/HRR.ipynb
@@ -2350,17 +2350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[('keys', 0.22905357790967992), ('Watch', -0.031681286732555429), ('mug', -0.015396442726899101), ('wallet', -0.014636960399164019), ('pen', 0.20437472822523348), ('mouse', -0.037309274079032256)]\n",
-      "[('keys', -0.017792583989756836), ('Watch', -0.020713603639186), ('mug', 0.015443695473324285), ('wallet', 0.161497089516248), ('pen', 0.060338227735112028), ('mouse', -0.02872920258008798)]\n"
+      "/disk/users/lesi/HBP/local/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
      ]
     }
    ],
