Created Bar Charts for paper. Still need text.

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -89,7 +89,6 @@
 \usepackage{subcaption}
 
 
-
 % *** CITATION PACKAGES ***
 %
 %% Use biber instead of BibTeX
@@ -333,6 +332,7 @@
 % (Unless specifically asked to do so by the journal or conference you plan
 % to submit to, of course. )
 
+\usepackage{pgfplots}
 
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
@@ -693,18 +693,46 @@ This can be solved by editing the permuted Gaussian bell to have \(\sum_{i=0}^n 
 						
 		
 		\caption{Representation of visual scene in short term symbolic memory. }
-		\label{fig:visual-scene-exp}
+		
 	\end{figure}
-	
-	FOR BAR CHART:
 	
 	Probe at (19,-26.75):
 	
-	[('keys', 0.22827929349034107), ('Watch', -0.018549398363469777), ('mug', -0.025309361445942102), ('wallet', -0.034187368731921304), ('pen', 0.2098596398998358), ('mouse', -0.023035819302988644)]
-	
+	    \begin{tikzpicture}
+        \begin{axis}[
+            symbolic x coords={keys, mouse, mug, pen, wallet, watch},
+            xtick=data
+          ]
+            \addplot[ybar,fill=blue] coordinates {
+                (keys,   0.22827929349034107)
+                (mouse, 0.023035819302988644)
+                (mug, 0.025309361445942102)
+                (pen, 0.2098596398998358)
+                (wallet, 0.034187368731921304)
+                (watch, 0.018549398363469777)
+            };
+        \end{axis}
+    \end{tikzpicture}
 	Probe at (-13,21.5):
 	
-[('keys', -0.020032173214673016), ('Watch', -0.034034204029029354), ('mug', 0.03443254630997427), ('wallet', 0.16100011074269183), ('pen', 0.089801145874187763), ('mouse', -0.027742071303527464)]
+	    \begin{tikzpicture}
+        \begin{axis}[
+            symbolic x coords={keys, mouse, mug, pen, wallet, watch},
+            xtick=data
+          ]
+            \addplot[ybar,fill=blue] coordinates {
+                (keys,   0.020032173214673016)
+                (mouse, 0.027742071303527464)
+                (mug, 0.03443254630997427)
+                (pen, 0.089801145874187763)
+                (wallet, 0.16100011074269183)
+                (watch, 0.034034204029029354)
+            };
+        \end{axis}
+    \end{tikzpicture}	
+			
+		\label{fig:visual-scene-exp}
+
 	
 	\subsection{Localization and mapping}
 	- TBD
