--- a/vsa/HRR.ipynb
+++ b/vsa/HRR.ipynb
@@ -2350,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -2361,6 +2361,22 @@
      "text": [
       "/disk/users/lesi/HBP/local/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
       "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('keys', 0.20963231465215285), ('Watch', -0.022501336064243854), ('mug', -0.040836074750102341), ('wallet', -0.018508496128379508), ('pen', 0.20262115460247085), ('mouse', -0.022139042171018353)]\n",
+      "[('keys', -0.02309378482253158), ('Watch', -0.039706844296827602), ('mug', 0.011649270565424873), ('wallet', 0.17634934264988872), ('pen', 0.063929587364353502), ('mouse', -0.018944731694046403)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "hrr.py:149: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n",
+      "  if memory == None:\n"
      ]
     }
    ],
