--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -441,8 +441,8 @@ Some preliminary theoretical assumptions have been made about ability to use the
 	
 	\begin{figure}
 		\center
-		\includegraphics[width=0.9\columnwidth]{img/cover_photo.png}
-		\caption{In-memory representation of top-down attention shift for visual scene short-term  memory}
+		\includegraphics[width=0.9\columnwidth]{img/probe_for_pen_w_img.png}
+		\caption{In-memory representation of top-down attention shift for visual scene short-term memory. Result shows attention distribution for a symbol "pen".}
 	\end{figure}
 	
 	
