--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -635,7 +635,7 @@ This can be solved by editing the permuted Gaussian bell to have \(\sum_{i=0}^n 
 	Vector Symbolic Architectures in general have following properties:
 	\begin{itemize}
 		\item Number of items stored in a single memory vector is not known based only on it's content.
-		\item Existence of item in memory cannot be explicitly checked. The closest equivalent is probing the memory for item of interest and comparing similarity of decoding result to anything meaningful.
+		\item Existence of an item in memory cannot be explicitly checked. The closest equivalent is probing the memory for item of interest and comparing similarity of decoding result to anything meaningful.
 		\item Chances of successful recall depend on the actual data stored.
 		\item Memories can be changed in online fashion. There is no need to recreate memories from scratch - symbols can be appended to or removed from (if presents) already existing memory vectors.
 	\end{itemize}
