Forgot to save the document before pushing

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -510,7 +510,7 @@ cos(\pmb x, \pmb y) = \frac {\pmb x \cdot \pmb y}{||\pmb x|| \cdot ||\pmb y||}
 	The process of converting a noisy result of probing into the closest known symbol is called the \textbf{clean-up procedure}.
 A straightforward way of implementing clean-up memory is using a lookup table, while other researchers show that any type of attractor network can be used (e.g. self-organizing maps).
 
-	In the case of look-up tables, in order to decode a specific symbolic vector, the elements from a symbol table are iterated over, the similarity to each of the entries is calculated and the symbol which presented maximum similarity is returned. A threshold for the similarity value is also used in order to exclude false-positives. This look-up requires O(M), where M is the number of symbols known to the system. This approach works quite well for object identifiers (names), but has some non-desirable properties when used on scalar encoding.
+	In the case of look-up tables, in order to decode a specific symbolic vector, the elements from a symbol table are iterated over, the similarity to each of the entries is calculated and the symbol which presented maximum similarity is returned. With the help of a threshold for the similarity value false-positives can be excluded. A look-up requires O(M), where M is the number of symbols known to the system. This approach works quite well for object identifiers (names), but has some non-desirable properties when used on scalar encoding.
 	//TODO Lookup Example
 	
 	This will consequently increase space complexity and may become infeasible, depending on the type of input used. While looking for existing elements may not require the entire table to be checked probing for non-existent ones will always traverse all entries only to show up empty at the end.When handling scalars symbolic encoding can be done by discretization of the whole input range into bins and assigning a random vector to each discrete value. This however may often prove to not satisfy the task needs any more.
